<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:orientation="vertical"

    tools:context=".help">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="help"
        android:textAlignment="center"
        android:textColor="@color/fore"
        android:textSize="50sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_weight="1"
        android:text="@string/Question1"
        android:textAlignment="center"
        android:textColor="@color/fore"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_weight="1"
        android:text="@string/Ans1"
        android:textColor="@color/fore"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_weight="1"
        android:text="@string/one"
        android:textColor="@color/fore"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/two"
        android:textColor="@color/fore"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/three"
        android:textColor="@color/fore"
        android:textSize="30sp"
        android:textAlignment="center"/>
</LinearLayout>